Change grid width and fix elements position on mobile screens.

--- a/static/css/scss/_footer.scss
+++ b/static/css/scss/_footer.scss
@@ -6,16 +6,16 @@
 
 .footer h2 {
     font-family: $font-ms, sans-serif;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 500;
     color: $g1;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .footer p,
 .footer-content li {
     font-family: $font-rto, sans-serif;
-    font-size: .875rem;
+    font-size: 1rem;
     font-weight: 300;
     line-height: 1.8;
     color: $g4;
@@ -42,8 +42,19 @@
     margin-top: 10px;
 }
 
+.footer-content .grid-8,
+.footer-content .grid-4 {
+    margin-top: 60px;
+    margin-left: 0;
+}
+
 .credits {
     text-align: right;
+}
+
+.credits a {
+    font-weight: 500;
+    letter-spacing: 1px;
 }
 
 .credits a:hover {
@@ -51,16 +62,19 @@
 }
 
 @media (max-width: 768px) {
+    .footer img {
+        margin-top: 10px;
+    }
+
     .footer h2 {
         margin-top: 30px;
     }
     .footer h3 {
         text-align: center;
-        padding-top: 60px;
+        padding-top: 30px;
     }
     .footer h3,
     .credits {
         text-align: center;
-        padding-top: 20px;
     }
 }
